--- a/assets/styles/scss/components/_navbar.scss
+++ b/assets/styles/scss/components/_navbar.scss
@@ -78,7 +78,8 @@ header {
             column-gap: 20px;
             filter: none;
             .mtext p{
-                margin-bottom: 5px;
+              margin-bottom: 0px;
+              font-family: "Roboto";
             }
             .mtext a{
             color: $primary !important;
