--- a/assets/styles/scss/site/_administration.scss
+++ b/assets/styles/scss/site/_administration.scss
@@ -48,11 +48,15 @@ section#card-experience{
          }
          .card-body {
            // padding: 0 78px;
-           h2{
-             font-weight: bold;
-             margin-bottom: 53px;
-           }
-         }
+          h2{
+            font-weight: bold;
+            margin-bottom: 53px;
+          }
+          h5{
+            font-family: "Roboto";
+            font-weight: 400;
+          }
+        }
        }
      }
    }
