--- a/assets/styles/scss/site/_us.scss
+++ b/assets/styles/scss/site/_us.scss
@@ -4,6 +4,10 @@ section#company{
   h2{
     font-weight: bold;
   }
+  h5{
+    font-family: "Roboto";
+    font-weight: 400;
+  }
 }
 //----------------------------cabins---------------------------------//
 section#cabins{
