--- a/assets/styles/scss/components/_footer.scss
+++ b/assets/styles/scss/components/_footer.scss
@@ -8,6 +8,7 @@ footer{
     text-decoration: none;
     font-weight: bold;
     margin-bottom: 20px;
+    line-height: 1.4;
   }
   a:hover{
     color: $white;
