--- a/assets/styles/scss/components/_navbar.scss
+++ b/assets/styles/scss/components/_navbar.scss
@@ -31,6 +31,7 @@ header {
                     align-items: center;
                       a{
                         color: $stylewhite;
+                        font-family: "Roboto";
                       }
                 }
                 li.nav-item:hover, li.nav-item:focus, li.nav-item:active, li.nav-item:visited{
